--- a/tests/linalg/internal/cpu/CMakeLists.txt
+++ b/tests/linalg/internal/cpu/CMakeLists.txt
@@ -1,5 +1,6 @@
 setup_test_serial(CholQR1CPUTest cholqr1.cpp LIBRARIES chase_cpu)
 setup_test_serial(LanczosCPUTest lanczos.cpp LIBRARIES chase_cpu)
+setup_test_serial(QuasiHermitianLanczosCPUTest quasi_hermitian_lanczos.cpp LIBRARIES chase_cpu)
 setup_test_serial(ResidualsCPUTest residuals.cpp LIBRARIES chase_cpu)
 setup_test_serial(RayleighRitzCPUTest rayleighRitz.cpp LIBRARIES chase_cpu)
 setup_test_serial(SymOrHermCPUTest symOrHerm.cpp LIBRARIES chase_cpu)
