Rayleigh-Ritz for QH mats OK on CPU.
Unitests in progress.

TO DO :
- Finish the unitests.
- Find a clean way to template Rayleigh-Ritz.
- Start updating the orthonormalization step.

--- a/tests/linalg/internal/cpu/CMakeLists.txt
+++ b/tests/linalg/internal/cpu/CMakeLists.txt
@@ -1,6 +1,7 @@
 setup_test_serial(CholQR1CPUTest cholqr1.cpp LIBRARIES chase_cpu)
 setup_test_serial(LanczosCPUTest lanczos.cpp LIBRARIES chase_cpu)
 setup_test_serial(QuasiHermitianLanczosCPUTest quasi_hermitian_lanczos.cpp LIBRARIES chase_cpu)
+setup_test_serial(QuasiHermitianRayleighRitzCPUTest quasi_hermitian_rayleighRitz.cpp LIBRARIES chase_cpu)
 setup_test_serial(ResidualsCPUTest residuals.cpp LIBRARIES chase_cpu)
 setup_test_serial(RayleighRitzCPUTest rayleighRitz.cpp LIBRARIES chase_cpu)
 setup_test_serial(SymOrHermCPUTest symOrHerm.cpp LIBRARIES chase_cpu)
