GPU Unitest for Sign Flip function + fix
The unitest for flipping the sign of the matrix lower half is passed.
This commit also fixes the test for the shift of the diagonal where the
number of rows was set to 3 instead of 4.

TO DO :
- Pursue the development of the GPU solver

--- a/tests/linalg/internal/cuda/CMakeLists.txt
+++ b/tests/linalg/internal/cuda/CMakeLists.txt
@@ -1,4 +1,5 @@
 setup_test_serial(shiftDiagonalGPUTest shiftDiagonal.cpp LIBRARIES chase_gpu chase_cpu)
+setup_test_serial(flipLowerHalfSignGPUTest flipSign.cpp LIBRARIES chase_gpu chase_cpu)
 setup_test_serial(absTraceGPUTest absTrace.cpp LIBRARIES chase_gpu chase_cpu)
 setup_test_serial(lacpyGPUTest lacpy.cpp LIBRARIES chase_gpu chase_cpu)
 setup_test_serial(ResidGPUTest residuals.cpp LIBRARIES chase_gpu chase_cpu)
