--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ stages:
 
 build_cpu:
   stage: build 
-  tags: [ docker-proton ]
+  tags: [ public-docker ]
   image:
     name: opensuse:jsc-gcc12
   script:
@@ -29,7 +29,7 @@ test_cpu:
   stage: test
   dependencies:
     - build_cpu
-  tags: [ docker-proton ]
+  tags: [ public-docker ]
   image:
     name: opensuse:jsc-gcc12
   script:
