--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,7 @@ stages:
 build_cpu:
   stage: build 
   tags: [ public-docker ]
-  image:
-    name: opensuse:jsc-gcc12
+  image: $CI_REGISTRY/nexgf/libnegf/rockylinux/openmpi-cpu
   script:
   - cmake --version
   - mkdir -p build_cpu
@@ -30,8 +29,7 @@ test_cpu:
   dependencies:
     - build_cpu
   tags: [ public-docker ]
-  image:
-    name: opensuse:jsc-gcc12
+  image: $CI_REGISTRY/nexgf/libnegf/rockylinux/openmpi-cpu
   script:
     - cd build_cpu
     - CTEST_OUTPUT_ON_FAILURE=1 make test
