--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ build_cpu:
   tags: [ public-docker ]
   image: registry.jsc.fz-juelich.de/sharedrunner/opensuse
   script:
+  - which clang-format
   - cmake --version
   - mkdir -p build_cpu
   - cd build_cpu
@@ -46,7 +47,7 @@ test_cpu:
 #    - jacamar
 #    - login
 #    - shell
- 
+# 
 #  id_tokens:
 #    SITE_ID_TOKEN:
 #      aud: https://gitlab.jsc.fz-juelich.de    
