QuasiHermitianBlockBlockMatrix class added
A new matrix for block block distributed Quasi-Hermitian Matrices has
been added. This commit also fixes an issue where both flags is_sym_ and
is_pseudoHerm_ were set to false by default, resulting in a bug in the
algorithm.inc.

TO DO :
- Fix the bug for pchase_gpu
- Start implementing the flip sign function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,11 @@ add_executable( "quasi_chase_driver_gpu" tests/quasi_noinput.cpp )
 target_link_libraries(quasi_chase_driver_gpu chase_gpu)
 endif()
 
+if(TARGET pchase_cpu)
+add_executable( "dist_quasi_chase_driver" tests/dist_quasi_noinput.cpp )
+target_link_libraries(dist_quasi_chase_driver pchase_cpu)
+endif()
+
 option(ENABLE_TESTS "Enable unit tests." OFF)
 if(ENABLE_TESTS)
     MESSAGE("Test enabled. Finding GoogleTests.")
