BlockBlock DistCPU Sing flip added
This commit also updates the sign flip functions of the CPU sequential
version. The sign flip is performed by a called to the scal function
from blas.

Tests of the sign flip functions have been added for both Seq and Dist
CPU versions.

TO DO :
- Start working on HEMM

--- a/tests/linalg/internal/cpu/CMakeLists.txt
+++ b/tests/linalg/internal/cpu/CMakeLists.txt
@@ -5,4 +5,5 @@ setup_test_serial(QuasiHermitianRayleighRitzCPUTest quasi_hermitian_rayleighRitz
 setup_test_serial(ResidualsCPUTest residuals.cpp LIBRARIES chase_cpu)
 setup_test_serial(RayleighRitzCPUTest rayleighRitz.cpp LIBRARIES chase_cpu)
 setup_test_serial(SymOrHermCPUTest symOrHerm.cpp LIBRARIES chase_cpu)
+setup_test_serial(flipSignCPUTest flipSign.cpp LIBRARIES chase_cpu)
 
