--- a/tests/linalg/internal/mpi/CMakeLists.txt
+++ b/tests/linalg/internal/mpi/CMakeLists.txt
@@ -4,4 +4,5 @@ setup_test(RayleighRitzCPUDistTest rayleighRitz.cpp LIBRARIES pchase_cpu)
 setup_test(ResidualsCPUDistTest residuals.cpp LIBRARIES pchase_cpu)
 setup_test(LanczosCPUDistTest lanczos.cpp LIBRARIES pchase_cpu)
 setup_test(shiftDiagonalCPUDistTest shiftDiagonal.cpp LIBRARIES pchase_cpu)
+setup_test(flipSignCPUDistTest flipSign.cpp LIBRARIES pchase_cpu)
 setup_test(symOrHermCPUDistTest symOrHerm.cpp LIBRARIES pchase_cpu)
