QuasiHEMM for QuasiHermitianBlockBlock matrices OK
The Distributed CPU Matrix Multi Vectors multiplication for
Quasi Hermitian matrices has been added with unitests.

TO DO :
- Add the test for the asynchronous HEMM?
- Start updating the distributed CPU Lanczos

--- a/tests/linalg/internal/mpi/CMakeLists.txt
+++ b/tests/linalg/internal/mpi/CMakeLists.txt
@@ -5,4 +5,5 @@ setup_test(ResidualsCPUDistTest residuals.cpp LIBRARIES pchase_cpu)
 setup_test(LanczosCPUDistTest lanczos.cpp LIBRARIES pchase_cpu)
 setup_test(shiftDiagonalCPUDistTest shiftDiagonal.cpp LIBRARIES pchase_cpu)
 setup_test(flipSignCPUDistTest flipSign.cpp LIBRARIES pchase_cpu)
+setup_test(QuasiHEMMCPUDistTest quasi_hermitian_hemm.cpp LIBRARIES pchase_cpu)
 setup_test(symOrHermCPUDistTest symOrHerm.cpp LIBRARIES pchase_cpu)
