--- a/tests/linalg/internal/mpi/CMakeLists.txt
+++ b/tests/linalg/internal/mpi/CMakeLists.txt
@@ -3,6 +3,7 @@ setup_test(CholQRCPUDistTest cholqr.cpp LIBRARIES pchase_cpu)
 setup_test(RayleighRitzCPUDistTest rayleighRitz.cpp LIBRARIES pchase_cpu)
 setup_test(ResidualsCPUDistTest residuals.cpp LIBRARIES pchase_cpu)
 setup_test(LanczosCPUDistTest lanczos.cpp LIBRARIES pchase_cpu)
+setup_test(QuasiHermitianLanczosCPUDistTest quasi_hermitian_lanczos.cpp LIBRARIES pchase_cpu)
 setup_test(shiftDiagonalCPUDistTest shiftDiagonal.cpp LIBRARIES pchase_cpu)
 setup_test(flipSignCPUDistTest flipSign.cpp LIBRARIES pchase_cpu)
 setup_test(QuasiHEMMCPUDistTest quasi_hermitian_hemm.cpp LIBRARIES pchase_cpu)
