Dist CPU Rayleigh-Ritz for QH Mats added
The distributed CPU implementation of Rayleigh-Ritz for Quasi-Hermitian
BlockBlock matrices has been added with Unitests.

TO DO :
- Update the orthonormalization stpe for QH mats
- Start working on BlockCyclicMatrices
- Benchmarks
- Start working on the distributed GPU implementation

--- a/tests/linalg/internal/mpi/CMakeLists.txt
+++ b/tests/linalg/internal/mpi/CMakeLists.txt
@@ -1,6 +1,7 @@
 setup_test(HEMMCPUDistTest hemm.cpp LIBRARIES pchase_cpu)
 setup_test(CholQRCPUDistTest cholqr.cpp LIBRARIES pchase_cpu)
 setup_test(RayleighRitzCPUDistTest rayleighRitz.cpp LIBRARIES pchase_cpu)
+setup_test(QuasiHermitianRayleighRitzCPUDistTest quasi_hermitian_rayleighRitz.cpp LIBRARIES pchase_cpu)
 setup_test(ResidualsCPUDistTest residuals.cpp LIBRARIES pchase_cpu)
 setup_test(LanczosCPUDistTest lanczos.cpp LIBRARIES pchase_cpu)
 setup_test(QuasiHermitianLanczosCPUDistTest quasi_hermitian_lanczos.cpp LIBRARIES pchase_cpu)
