--- a/tests/linalg/internal/nccl/CMakeLists.txt
+++ b/tests/linalg/internal/nccl/CMakeLists.txt
@@ -4,4 +4,5 @@ setup_test(RayleighRitzGPUNCCLDistTest rayleighRitz.cpp LIBRARIES pchase_gpu)
 setup_test(ResidualsGPUNCCLDistTest residuals.cpp LIBRARIES pchase_gpu)
 setup_test(LanczosGPUNCCLDistTest lanczos.cpp LIBRARIES pchase_gpu)
 setup_test(shiftDiagonalGPUNCCLDistTest shiftDiagonal.cpp LIBRARIES pchase_gpu)
+setup_test(flipSignGPUNCCLDistTest flipSign.cpp LIBRARIES pchase_gpu)
 setup_test(symOrHermGPUDistTest symOrHerm.cpp LIBRARIES pchase_gpu)
