Quasi Hermitian Matrix Multiply with Unitests
TO DO :
- Update Lanczos for Dist GPUs for Quasi Hermitian
- /!\ Init Unitests for Quasi Hermitian Dist GPU once
- Update RR for Dist GPUs for Quasi Hermitian

--- a/tests/linalg/internal/nccl/CMakeLists.txt
+++ b/tests/linalg/internal/nccl/CMakeLists.txt
@@ -1,4 +1,5 @@
 setup_test(HEMMGPUNCCLDistTest hemm.cpp LIBRARIES pchase_gpu)
+setup_test(QuasiHEMMGPUDistTest quasi_hermitian_hemm.cpp LIBRARIES pchase_gpu)
 setup_test(CholQRGPUNCCLDistTest cholqr.cpp LIBRARIES pchase_gpu)
 setup_test(RayleighRitzGPUNCCLDistTest rayleighRitz.cpp LIBRARIES pchase_gpu)
 setup_test(ResidualsGPUNCCLDistTest residuals.cpp LIBRARIES pchase_gpu)
