Bug in QuasiLanczos DistGPU unitests..

--- a/tests/linalg/internal/nccl/CMakeLists.txt
+++ b/tests/linalg/internal/nccl/CMakeLists.txt
@@ -2,6 +2,7 @@ setup_test(HEMMGPUNCCLDistTest hemm.cpp LIBRARIES pchase_gpu)
 setup_test(QuasiHEMMGPUDistTest quasi_hermitian_hemm.cpp LIBRARIES pchase_gpu)
 setup_test(CholQRGPUNCCLDistTest cholqr.cpp LIBRARIES pchase_gpu)
 setup_test(RayleighRitzGPUNCCLDistTest rayleighRitz.cpp LIBRARIES pchase_gpu)
+setup_test(QuasiRayleighRitzGPUNCCLDistTest quasi_hermitian_rayleighRitz.cpp LIBRARIES pchase_gpu)
 setup_test(ResidualsGPUNCCLDistTest residuals.cpp LIBRARIES pchase_gpu)
 setup_test(QuasiHermitianLanczosGPUNCCLDistTest quasi_hermitian_lanczos.cpp LIBRARIES pchase_gpu)
 setup_test(LanczosGPUNCCLDistTest lanczos.cpp LIBRARIES pchase_gpu)
