DistGPU RayRitz. for QuasiHerm. matrices added.
All the current Unitests for Quasi Hermitian matrices passed,
at least locally.

TO DO :
- Update the Orthonormalization Step
- Check that it converges with same number of iterations
- Update the cuda_aware_mpi implementation & check
- JUBE benchmarks

--- a/tests/linalg/internal/nccl/CMakeLists.txt
+++ b/tests/linalg/internal/nccl/CMakeLists.txt
@@ -1,5 +1,5 @@
 setup_test(HEMMGPUNCCLDistTest hemm.cpp LIBRARIES pchase_gpu)
-setup_test(QuasiHEMMGPUDistTest quasi_hermitian_hemm.cpp LIBRARIES pchase_gpu)
+setup_test(QuasiHEMMGPUNCCLDistTest quasi_hermitian_hemm.cpp LIBRARIES pchase_gpu)
 setup_test(CholQRGPUNCCLDistTest cholqr.cpp LIBRARIES pchase_gpu)
 setup_test(RayleighRitzGPUNCCLDistTest rayleighRitz.cpp LIBRARIES pchase_gpu)
 setup_test(QuasiRayleighRitzGPUNCCLDistTest quasi_hermitian_rayleighRitz.cpp LIBRARIES pchase_gpu)
