Dist GPU Cuda AWARE MPI with Unitests works
Need to fix few things and the ready for push to Master branch

TO DO :
- Add an offset parameter for the flip sign functions of dist CPU
- Avoid flipping back W1 and V2 in RayleighRitz

--- a/tests/linalg/internal/cuda_aware_mpi/CMakeLists.txt
+++ b/tests/linalg/internal/cuda_aware_mpi/CMakeLists.txt
@@ -1,7 +1,10 @@
 setup_test(HEMMGPUDistTest hemm.cpp LIBRARIES pchase_gpu)
+setup_test(QuasiHEMMGPUDistTest quasi_hermitian_hemm.cpp LIBRARIES pchase_gpu)
 setup_test(CholQRGPUDistTest cholqr.cpp LIBRARIES pchase_gpu)
 setup_test(LanczosGPUDistTest lanczos.cpp LIBRARIES pchase_gpu)
+setup_test(QuasiLanczosGPUDistTest quasi_hermitian_lanczos.cpp LIBRARIES pchase_gpu)
 setup_test(RayleighRitzGPUDistTest rayleighRitz.cpp LIBRARIES pchase_gpu)
+setup_test(QuasiRayleighRitzGPUDistTest quasi_hermitian_rayleighRitz.cpp LIBRARIES pchase_gpu)
 setup_test(ResidualsGPUDistTest residuals.cpp LIBRARIES pchase_gpu)
 setup_test(shiftDiagonalGPUDistTest shiftDiagonal.cpp LIBRARIES pchase_gpu)
 setup_test(symOrHermGPU2DistTest symOrHerm.cpp LIBRARIES pchase_gpu)
