Improve example 5 by using popl to parser command line arguments

--- a/examples/5_bse_benchmark/CMakeLists.txt
+++ b/examples/5_bse_benchmark/CMakeLists.txt
@@ -1,61 +1,78 @@
-add_executable( "herm_chase_run_cpu" 5_bse_benchmark.cpp )
-target_link_libraries("herm_chase_run_cpu" chase_cpu)
+if(POPL_FOUND)
+    add_executable( "herm_chase_run_cpu" 5_bse_benchmark.cpp )
+    target_link_libraries("herm_chase_run_cpu" chase_cpu)
+    target_include_directories( "herm_chase_run_cpu" PRIVATE ${POPL_INCLUDE_DIR})
 
-add_executable( "quasi_chase_run_cpu" 5_bse_benchmark.cpp )
-target_link_libraries("quasi_chase_run_cpu" chase_cpu)
-target_compile_definitions( "quasi_chase_run_cpu" PRIVATE USE_QUASI_HERMITIAN=1)
+    add_executable( "quasi_chase_run_cpu" 5_bse_benchmark.cpp )
+    target_link_libraries("quasi_chase_run_cpu" chase_cpu)
+    target_compile_definitions( "quasi_chase_run_cpu" PRIVATE USE_QUASI_HERMITIAN=1)
+    target_include_directories( "quasi_chase_run_cpu" PRIVATE ${POPL_INCLUDE_DIR})
 
-if(TARGET chase_gpu)
-add_executable("herm_chase_run_gpu" 5_bse_benchmark.cpp)
-target_link_libraries("herm_chase_run_gpu" chase_gpu)
-target_compile_definitions("herm_chase_run_gpu" INTERFACE "-DHAS_CUDA")
+    if(TARGET chase_gpu)
+        add_executable("herm_chase_run_gpu" 5_bse_benchmark.cpp)
+        target_link_libraries("herm_chase_run_gpu" chase_gpu)
+        target_compile_definitions("herm_chase_run_gpu" INTERFACE "-DHAS_CUDA")
+        target_include_directories( "herm_chase_run_gpu" PRIVATE ${POPL_INCLUDE_DIR})
 
-add_executable("quasi_chase_run_gpu" 5_bse_benchmark.cpp)
-target_link_libraries("quasi_chase_run_gpu" chase_gpu)
-target_compile_definitions("quasi_chase_run_gpu" PRIVATE USE_QUASI_HERMITIAN=1)
-target_compile_definitions("quasi_chase_run_gpu" INTERFACE "-DHAS_CUDA")
-endif()
+        add_executable("quasi_chase_run_gpu" 5_bse_benchmark.cpp)
+        target_link_libraries("quasi_chase_run_gpu" chase_gpu)
+        target_compile_definitions("quasi_chase_run_gpu" PRIVATE USE_QUASI_HERMITIAN=1)
+        target_compile_definitions("quasi_chase_run_gpu" INTERFACE "-DHAS_CUDA")
+        target_include_directories( "quasi_chase_run_gpu" PRIVATE ${POPL_INCLUDE_DIR})
+    endif()
 
-if(TARGET pchase_cpu)
-add_executable("herm_block_dist_chase_run_cpu" 5_bse_benchmark.cpp)
-target_link_libraries("herm_block_dist_chase_run_cpu" pchase_cpu)
-target_compile_definitions("herm_block_dist_chase_run_cpu" PRIVATE USE_MPI=1)
+    if(TARGET pchase_cpu)
+        add_executable("herm_block_dist_chase_run_cpu" 5_bse_benchmark.cpp)
+        target_link_libraries("herm_block_dist_chase_run_cpu" pchase_cpu)
+        target_compile_definitions("herm_block_dist_chase_run_cpu" PRIVATE USE_MPI=1)
+        target_include_directories( "herm_block_dist_chase_run_cpu" PRIVATE ${POPL_INCLUDE_DIR})
 
-add_executable("quasi_block_dist_chase_run_cpu" 5_bse_benchmark.cpp)
-target_link_libraries("quasi_block_dist_chase_run_cpu" pchase_cpu)
-target_compile_definitions("quasi_block_dist_chase_run_cpu" PRIVATE USE_QUASI_HERMITIAN=1)
-target_compile_definitions("quasi_block_dist_chase_run_cpu" PRIVATE USE_MPI=1)
+        add_executable("quasi_block_dist_chase_run_cpu" 5_bse_benchmark.cpp)
+        target_link_libraries("quasi_block_dist_chase_run_cpu" pchase_cpu)
+        target_compile_definitions("quasi_block_dist_chase_run_cpu" PRIVATE USE_QUASI_HERMITIAN=1)
+        target_compile_definitions("quasi_block_dist_chase_run_cpu" PRIVATE USE_MPI=1)
+        target_include_directories( "quasi_block_dist_chase_run_cpu" PRIVATE ${POPL_INCLUDE_DIR})
 
-add_executable("herm_cyclic_dist_chase_run_cpu" 5_bse_benchmark.cpp)
-target_link_libraries("herm_cyclic_dist_chase_run_cpu" pchase_cpu)
-target_compile_definitions("herm_cyclic_dist_chase_run_cpu" PRIVATE USE_BLOCKCYCLIC=1)
-target_compile_definitions("herm_cyclic_dist_chase_run_cpu" PRIVATE USE_MPI=1)
+        add_executable("herm_cyclic_dist_chase_run_cpu" 5_bse_benchmark.cpp)
+        target_link_libraries("herm_cyclic_dist_chase_run_cpu" pchase_cpu)
+        target_compile_definitions("herm_cyclic_dist_chase_run_cpu" PRIVATE USE_BLOCKCYCLIC=1)
+        target_compile_definitions("herm_cyclic_dist_chase_run_cpu" PRIVATE USE_MPI=1)
+        target_include_directories( "herm_cyclic_dist_chase_run_cpu" PRIVATE ${POPL_INCLUDE_DIR})
 
-add_executable("quasi_cyclic_dist_chase_run_cpu" 5_bse_benchmark.cpp )
-target_link_libraries("quasi_cyclic_dist_chase_run_cpu" pchase_cpu)
-target_compile_definitions("quasi_cyclic_dist_chase_run_cpu" PRIVATE USE_BLOCKCYCLIC=1)
-target_compile_definitions("quasi_cyclic_dist_chase_run_cpu" PRIVATE USE_QUASI_HERMITIAN=1)
-target_compile_definitions("quasi_cyclic_dist_chase_run_cpu" PRIVATE USE_MPI=1)
-endif()
+        add_executable("quasi_cyclic_dist_chase_run_cpu" 5_bse_benchmark.cpp )
+        target_link_libraries("quasi_cyclic_dist_chase_run_cpu" pchase_cpu)
+        target_compile_definitions("quasi_cyclic_dist_chase_run_cpu" PRIVATE USE_BLOCKCYCLIC=1)
+        target_compile_definitions("quasi_cyclic_dist_chase_run_cpu" PRIVATE USE_QUASI_HERMITIAN=1)
+        target_compile_definitions("quasi_cyclic_dist_chase_run_cpu" PRIVATE USE_MPI=1)
+        target_compile_definitions("quasi_cyclic_dist_chase_run_cpu" PRIVATE USE_MPI=1)
+        target_include_directories( "quasi_cyclic_dist_chase_run_cpu" PRIVATE ${POPL_INCLUDE_DIR})
+    endif()
 
-if(TARGET pchase_gpu)
-add_executable("herm_block_dist_chase_run_gpu" 5_bse_benchmark.cpp)
-target_link_libraries("herm_block_dist_chase_run_gpu" pchase_gpu)
-target_compile_definitions("herm_block_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL -DHAS_CUDA")
+    if(TARGET pchase_gpu)
+        add_executable("herm_block_dist_chase_run_gpu" 5_bse_benchmark.cpp)
+        target_link_libraries("herm_block_dist_chase_run_gpu" pchase_gpu)
+        target_compile_definitions("herm_block_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL -DHAS_CUDA")
+        target_include_directories( "herm_block_dist_chase_run_gpu" PRIVATE ${POPL_INCLUDE_DIR})
 
-add_executable("quasi_block_dist_chase_run_gpu" 5_bse_benchmark.cpp)
-target_link_libraries("quasi_block_dist_chase_run_gpu"  pchase_gpu)
-target_compile_definitions("quasi_block_dist_chase_run_gpu" PRIVATE USE_QUASI_HERMITIAN=1)
-target_compile_definitions("quasi_block_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL -DHAS_CUDA")
+        add_executable("quasi_block_dist_chase_run_gpu" 5_bse_benchmark.cpp)
+        target_link_libraries("quasi_block_dist_chase_run_gpu"  pchase_gpu)
+        target_compile_definitions("quasi_block_dist_chase_run_gpu" PRIVATE USE_QUASI_HERMITIAN=1)
+        target_compile_definitions("quasi_block_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL -DHAS_CUDA")
+        target_include_directories( "quasi_block_dist_chase_run_gpu" PRIVATE ${POPL_INCLUDE_DIR})
 
-add_executable("herm_cyclic_dist_chase_run_gpu" 5_bse_benchmark.cpp)
-target_link_libraries("herm_cyclic_dist_chase_run_gpu" pchase_gpu)
-target_compile_definitions("herm_cyclic_dist_chase_run_gpu" PRIVATE USE_BLOCKCYCLIC=1)
-target_compile_definitions("herm_cyclic_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL -DHAS_CUDA")
+        add_executable("herm_cyclic_dist_chase_run_gpu" 5_bse_benchmark.cpp)
+        target_link_libraries("herm_cyclic_dist_chase_run_gpu" pchase_gpu)
+        target_compile_definitions("herm_cyclic_dist_chase_run_gpu" PRIVATE USE_BLOCKCYCLIC=1)
+        target_compile_definitions("herm_cyclic_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL -DHAS_CUDA")
+        target_include_directories( "herm_cyclic_dist_chase_run_gpu" PRIVATE ${POPL_INCLUDE_DIR})
 
-add_executable("quasi_cyclic_dist_chase_run_gpu" 5_bse_benchmark.cpp)
-target_link_libraries("quasi_cyclic_dist_chase_run_gpu" pchase_gpu)
-target_compile_definitions("quasi_cyclic_dist_chase_run_gpu" PRIVATE USE_BLOCKCYCLIC=1)
-target_compile_definitions("quasi_cyclic_dist_chase_run_gpu" PRIVATE USE_QUASI_HERMITIAN=1)
-target_compile_definitions("quasi_cyclic_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL" "-DHAS_CUDA")
+        add_executable("quasi_cyclic_dist_chase_run_gpu" 5_bse_benchmark.cpp)
+        target_link_libraries("quasi_cyclic_dist_chase_run_gpu" pchase_gpu)
+        target_compile_definitions("quasi_cyclic_dist_chase_run_gpu" PRIVATE USE_BLOCKCYCLIC=1)
+        target_compile_definitions("quasi_cyclic_dist_chase_run_gpu" PRIVATE USE_QUASI_HERMITIAN=1)
+        target_compile_definitions("quasi_cyclic_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL" "-DHAS_CUDA")
+        target_include_directories( "quasi_cyclic_dist_chase_run_gpu" PRIVATE ${POPL_INCLUDE_DIR})
+        endif()
+else()
+  message( "popl not found, not building example 2" )
 endif()
