Correct install path for Impl/config

--- a/Impl/pchase_gpu/CMakeLists.txt
+++ b/Impl/pchase_gpu/CMakeLists.txt
@@ -50,7 +50,7 @@ install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION ${CMAKE_INSTALL_INCLUD
     PATTERN "*.hpp"
 )
 
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/Impl/config DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/Impl/config DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/Impl
   FILES_MATCHING
     PATTERN "*.hpp"
 )
